.provarCaches/00D410000011HE0EAM/objects/rstk__obshipcontdtl__c.object
<CustomObject>
    <description>obshipcontdtl_c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__obshipcontdtl_obshipcont__r.rstk__externalid__c + &apos;&apos; +  TEXT( rstk__obshipcontdtl_seq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__obshipcontdtl_obshipcont__r.rstk__obshipcont_containerid__c +&apos;_&apos;+ TEXT(rstk__obshipcontdtl_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__obshipcontdtl_obshipcont__r.rstk__obshipcont_containerid__c +&apos;_&apos;+TEXT(rstk__obshipcontdtl_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_icreceptacle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receptacle Return</label>
        <referenceTo>rstk__icreceptacle__c</referenceTo>
        <relationshipName>obshipcontdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_ipn__c</fullName>
        <label>IPN Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_maxf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Maximum Shipping Temp (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_minf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Minimum Shipping Temp (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_mtrpartno__c</fullName>
        <formula>rstk__obshipcontdtl_supmtr__r.rstk__supmtr_supitem__r.Name</formula>
        <inlineHelpText>Part Number of material being transferred.</inlineHelpText>
        <label>Material Transfer Part No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_mtrqnty__c</fullName>
        <formula>rstk__obshipcontdtl_supmtr__r.rstk__supmtr_qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity in inventory uom of item being transferred.</inlineHelpText>
        <label>Material Transfer Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_obshipcont__c</fullName>
        <label>Shipment Container ID</label>
        <referenceTo>rstk__obshipcont__c</referenceTo>
        <relationshipLabel>Outbound Shipment Container Contents</relationshipLabel>
        <relationshipName>obshipcontdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Outbound Shipment Container Contents</relationshipLabel>
        <relationshipName>obshipcontdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_receptqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receptacle Return Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcontdtl_supmtr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>System-assigned number identifying this specific material transfer request.</inlineHelpText>
        <label>Material Transfer Request</label>
        <referenceTo>rstk__supmtr__c</referenceTo>
        <relationshipName>supmtrobshipcontdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Outbound Shipment Container Content</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Shipment Container Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Container_ID_cannot_change</fullName>
        <active>true</active>
        <description>Container ID cannot be changed.</description>
        <errorConditionFormula>ischanged(rstk__obshipcontdtl_obshipcont__c)</errorConditionFormula>
        <errorMessage>Container ID cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Material_Transfer_Request</fullName>
        <active>true</active>
        <description>Provided Material Transfer Request is not released for Shipment.</description>
        <errorConditionFormula>NOT(ISBLANK(rstk__obshipcontdtl_supmtr__c)) &amp;&amp; NOT(rstk__obshipcontdtl_supmtr__r.rstk__supmtr_released__c)</errorConditionFormula>
        <errorMessage>Provided Material Transfer Request is not released for Shipment.</errorMessage>
    </validationRules>
</CustomObject>